# RAGArena

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
app/: __init__.py  dependencies.py  main.py  schemas.py
app/api/v1/: agent.py  ask.py  cache_helpers.py  feedback.py  health.py  papers.py  router.py  search.py  serializers.py  stream.py
data/eval/: README.md  ablation_10paper_hybrid_plan.json  ablation_10paper_plan.json  ablation_10paper_rerank_plan.json  ablation_plan.json  ablation_sample30_plan.json  qa_ablation_100.json  qa_ablation_rerank_sample10.json  qa_ablation_sample30.json  rerank_sample10_plan.json  retrieval_stack_sample30_plan.json
reports/evaluation/: ablation_10paper_hybrid.json  ablation_10paper_hybrid.md  rerank_sample10.json  rerank_sample10.md  retrieval_stack_sample30.json  retrieval_stack_sample30.md
src/ragarena/: config.py  logging.py  runtime.py
src/ragarena/agent/: __init__.py  nodes.py  state.py  state_utils.py  workflow.py
src/ragarena/cache/: __init__.py  redis_cache.py
src/ragarena/chunking/: __init__.py  agentic_chunker.py  block_chunker.py  boundary_validator.py  fixed_chunker.py  repository.py  section_names.py
src/ragarena/cli/: __init__.py  agent_test.py  arxiv_fetch.py  ask.py  chunk.py  download_random_papers.py  embed.py  evaluate.py  formatters.py  generate_eval_qa.py  index_embeddings.py  ingest.py  paper_batch.py  paper_download.py  paper_parse.py  pipeline.py  prepare_ablation_corpus.py  rebuild_paper.py  reset_data.py  search.py
src/ragarena/embedding/: __init__.py  encoder.py  repository.py
src/ragarena/evaluation/: __init__.py  dataset.py  framework.py  metrics.py  qa_generator.py  retrieval_eval.py  runner.py
src/ragarena/generation/: __init__.py  direct.py  generator.py  prompt.py  service.py
src/ragarena/ingestion/: __init__.py  hashing.py  loaders.py  repository.py
src/ragarena/observability/: __init__.py  langfuse_tracer.py  trace_summary.py
src/ragarena/papers/: __init__.py  arxiv_client.py  docling_parser.py  downloader.py  metadata_noise.py  models.py  repository.py  structured_parser.py  text_parser.py
tests/: __init__.py  test_agent.py  test_agentic_chunker.py  test_api.py  test_block_chunker.py  test_boundary_validator.py  test_docling_parser.py  test_evaluation.py  test_evaluation_framework.py  test_graph.py  test_observability.py  test_ollama_non_thinking.py  test_papers.py  test_pipeline.py  test_pipeline_runner.py  test_rebuild_paper.py  test_retrieval.py  test_retrieval_eval.py  test_structured_fallback.py  test_structured_parser.py  test_text_utils.py
(+18 files in other folders)
